# origin-MCP

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  run_server.py  sample.csv  server.py
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  publish.yml
src/mcp_origin/: __init__.py  server.py  utils.py
src/mcp_origin/core/: __init__.py  connection.py  constants.py  errors.py
src/mcp_origin/tools/: __init__.py  analysis.py  customize.py  data.py  export.py  plot.py  project.py
tests/: __init__.py  conftest.py
